Ensure prompt elements are left aligned

--- a/projects/plugins/jetpack/extensions/blocks/blogging-prompt/style.scss
+++ b/projects/plugins/jetpack/extensions/blocks/blogging-prompt/style.scss
@@ -8,11 +8,11 @@
 
 	&__label {
 		background: no-repeat url('./icon.svg');
-		background-position: left;
+		background-position: -5px center;
 		background-size: 24px 24px;
 		font-size: 14px;
 		margin-bottom: $grid-unit-20;
-		padding-left: 26px;
+		padding-left: 22px;
 	}
 
 	&__text {
@@ -36,6 +36,10 @@
 		height: 24px;
 		vertical-align: middle;
 		width: 24px;
+
+		&:first-child {
+			margin-left: -2px;
+		}
 
 		&:not(:first-child) {
 			margin-left: -15px;
